# course-cs354-computer-graphics-utexas

./: .gitignore  .kdev_include_paths  Makefile.am  TODO  billiards.sh  configure.ac
debug/: Makefile.am  db_GLHelloWorld.cpp  db_GLHelloWorld.h  db_cube.cpp  db_cube.h
demo/: Makefile.am  gl_atom.cpp
demo/billiards/: Makefile.am  Makefile.bak  configure.ac  src
demo/gl_demo/: .gitignore  Makefile.am  configure.ac  gl_atom.cpp  gl_cube.cpp  gl_cube_fps.cpp
demo/mocap/: Makefile.am  README  README.txt  bvh.l  check-code  configure.ac  joint.cpp  joint.h  lib_drm_intel.supp  main.cpp  src
demo/ray/: Makefile.am  buildlog  configure.ac
demo/ray/src/: RayTracer.cpp  RayTracer.h  getopt.cpp  getopt.h
demo/ray/src/SceneObjects/: Box.cpp  trimesh.cpp  trimesh.h
demo/ray/src/scene/: light.cpp  material.cpp  material.h  ray.h  scene.cpp  scene.h
demo/ray/src/ui/: CommandLineUI.cpp
demo/ray/src/vecmath/: mat.h  vec.h
demo/shader/: Makefile.am  configure.ac
demo/shader/glsl/: 03_bump_diffuse.frag  04_specular.frag  05_diffspec.frag  06_bump_lit.frag  07_reflection.frag  08_bump_reflection.frag  09_combo.frag  torus.vert
demo/shader/glsl-example/glsl/: 02_diffuse.frag  torus.vert
demo/shader/shader_scene/: .gitignore  glsl  tga
demo/turtle/: Makefile  geometry.h  old_design.txt  point.h  turtle.cpp  vector.h
demo/turtle/test/: Makefile.am  main.cpp
demo/viewer/: .gitignore  Makefile.am  README.txt  configure.ac  io.cpp  jpeglib.hpp  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h
hw01/: hw01-minhpham.tex
hw02/: hw02-minhpham.tex  hw02.tex
hw03/: hw03-minhpham.tex
hw04/: hw04-minhpham.tex
src/: Makefile.am
src/core/: bbox.h  color.cpp  color.h  common.h  geometry.h  imaterial.cpp  imaterial.h  matrix.cpp  matrix.h  point.cpp  point.h  shape.cpp  shape.h  timer.cpp  timer.h  transform.cpp  transform.h  vector.cpp  vector.h
src/core/test/: Makefile.am  geometry_test.cpp  matrix_test.cpp  point_test.cpp  point_vector_test.cpp  transform_point_test.cpp  transform_test.cpp  transform_vector_test.cpp  vector_test.cpp
src/debug/: Makefile.am
src/demo/: Makefile.am  cube  gl_cube.cpp
src/physics/: .collission.cpp.kate-swp  collision.cpp  collision.h  collission.cpp  object.h  sphere.cpp  sphere.h
src/project1/: color.cpp  color.h  common.h  design.txt  main.cpp  point.cpp  submit  submit-README.txt  turtle.cpp  turtle.h  vector.cpp  vector.h
src/project1/test/: turtle_test.cpp
src/project2/: .main.cpp.kate-swp  Makefile  Makefile.am  README.txt  ball.cpp  ball.h  main.cpp  submit
src/project3/: Makefile.am  configure.ac  src
src/rendering/: Camera.h  GLRenderer.cpp  GLRenderer.h  renderer.cpp  renderer.h
src/shapes/: disk.cpp  disk.h  quad.cpp  quad.h  shape.cpp  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  trianglemesh.cpp  trianglemesh.h
src/shapes/test/: Makefile.am
src/turtle/: turtle.cpp
