bin_PROGRAMS = billiards

billiards_CPPFLAGS = -I$(srcdir)/src
billiards_LDFLAGS = -lglut -lGLU -lGL -lm
billiards_SOURCES = $(srcdir)/main.cpp \
                    $(srcdir)/ball.cpp \
                    $(srcdir)/ball.h \
                    $(srcdir)/geom2.h \
                    $(srcdir)/src/core/common.h \
                    $(srcdir)/src/core/geometry.h \
                    $(srcdir)/src/core/point.cpp \
                    $(srcdir)/src/core/point.h \
                    $(srcdir)/src/core/color.cpp \
                    $(srcdir)/src/core/color.h \
                    $(srcdir)/src/core/vector.cpp \
                    $(srcdir)/src/core/vector.h \
                    $(srcdir)/src/core/matrix.cpp \
                    $(srcdir)/src/core/matrix.h \
                    $(srcdir)/src/core/transform.cpp \
                    $(srcdir)/src/core/transform.h \
                    $(srcdir)/src/physics/object.cpp \
                    $(srcdir)/src/physics/object.h \
                    $(srcdir)/src/physics/sphere.cpp \
                    $(srcdir)/src/physics/sphere.h \
                    $(srcdir)/src/physics/collision.cpp \
                    $(srcdir)/src/physics/collision.h \
                    $(srcdir)/src/shapes/disk.cpp \
                    $(srcdir)/src/shapes/disk.h
