bin_PROGRAMS = ray

AM_CPPFLAGS = -Wall -g

ray_SOURCES = \
              $(srcdir)/src/main.cpp \
              $(srcdir)/src/general.h \
              $(srcdir)/src/getopt.h \
              $(srcdir)/src/RayTracer.cpp \
              $(srcdir)/src/RayTracer.h \
              $(srcdir)/src/ui/CommandLineUI.cpp \
              $(srcdir)/src/ui/CommandLineUI.h \
              $(srcdir)/src/ui/GraphicalUI.cpp \
              $(srcdir)/src/ui/GraphicalUI.h \
              $(srcdir)/src/ui/TraceGLWindow.cpp \
              $(srcdir)/src/ui/TraceGLWindow.h \
              $(srcdir)/src/ui/debuggingView.cpp \
              $(srcdir)/src/ui/debuggingView.h \
              $(srcdir)/src/ui/debuggingWindow.cxx \
              $(srcdir)/src/ui/debuggingWindow.h \
              $(srcdir)/src/ui/glObjects.cpp \
              $(srcdir)/src/ui/ModelerCamera.cpp \
              $(srcdir)/src/ui/ModelerCamera.h \
              $(srcdir)/src/ui/TraceUI.h \
              $(srcdir)/src/fileio/bitmap.cpp \
              $(srcdir)/src/fileio/bitmap.h \
              $(srcdir)/src/fileio/buffer.cpp \
              $(srcdir)/src/fileio/buffer.h \
              $(srcdir)/src/fileio/pngimage.cpp \
              $(srcdir)/src/fileio/pngimage.h \
              $(srcdir)/src/parser/Token.cpp \
              $(srcdir)/src/parser/Token.h \
              $(srcdir)/src/parser/Tokenizer.cpp \
              $(srcdir)/src/parser/Tokenizer.h \
              $(srcdir)/src/parser/Parser.cpp \
              $(srcdir)/src/parser/Parser.h \
              $(srcdir)/src/parser/ParserException.cpp \
              $(srcdir)/src/parser/ParserException.h \
              $(srcdir)/src/scene/bbox.h \
              $(srcdir)/src/scene/camera.cpp \
              $(srcdir)/src/scene/camera.h \
              $(srcdir)/src/scene/light.cpp \
              $(srcdir)/src/scene/light.h \
              $(srcdir)/src/scene/material.cpp \
              $(srcdir)/src/scene/material.h \
              $(srcdir)/src/scene/ray.cpp \
              $(srcdir)/src/scene/ray.h \
              $(srcdir)/src/scene/scene.cpp \
              $(srcdir)/src/scene/scene.h \
              $(srcdir)/src/vecmath/vec.h \
              $(srcdir)/src/vecmath/mat.h \
              $(srcdir)/src/SceneObjects/Box.cpp \
              $(srcdir)/src/SceneObjects/Box.h \
              $(srcdir)/src/SceneObjects/Cone.cpp \
              $(srcdir)/src/SceneObjects/Cone.h \
              $(srcdir)/src/SceneObjects/Cylinder.cpp \
              $(srcdir)/src/SceneObjects/Cylinder.h \
              $(srcdir)/src/SceneObjects/trimesh.cpp \
              $(srcdir)/src/SceneObjects/trimesh.h \
              $(srcdir)/src/SceneObjects/Sphere.cpp \
              $(srcdir)/src/SceneObjects/Sphere.h \
              $(srcdir)/src/SceneObjects/Square.cpp \
              $(srcdir)/src/SceneObjects/Square.h